Added test hightligts

--- a/chellange1/index.html
+++ b/chellange1/index.html
@@ -16,6 +16,14 @@
     <h1 class="main__title">
       Coding chellange 1
     </h1>
+    <pre class="prettyprint">class Voila {
+        public:
+          // Voila
+          static const string VOILA = "Voila";
+        
+          // will not interfere with embedded <a href="#voila2">tags</a>.
+        }
+    </pre>
   </main>
 </body>
 
