--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="css/style.css">
-
     <title>Js courses</title>
 </head>
 
@@ -23,7 +22,7 @@
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="#">Coding chellange 2</a>
+                   href="#">Coding chellange </a>
             </li>
         </ul>
     </main>
