added heading-primary-main fixing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main class="main">
-        <h1 class="main__title">
+        <h1 class="heading-primary--main">
             The Complete JavaScript Course
         </h1>
         <ul class="main__list">
