Added heading secondary, primary and adaptive

--- a/chellange1/index.html
+++ b/chellange1/index.html
@@ -12,15 +12,15 @@
 
 <body>
   <main class="main">
-    <h1 class="main__title">
+    <h1 class="heading-secondary">
       Coding chellange 1
     </h1>
     <section class="section">
       <div class="section__task">
-        <h2 class="section__second-title">
+        <h2 class="heading-primary--sub">
           Task 1
         </h2>
-        <p>
+        <p class="paragraph">
           BMI: mass / height^2 = mass / (height * height)
           </br>1.store mark and john's mass and height in variables.
           </br>2.calculate both their bmis.
@@ -32,7 +32,7 @@
         </p>
       </div>
       <div class="section__code">
-        <h2 class="section__second-title">
+        <h2 class="heading-primary--sub">
           Code
         </h2>
         <pre class="prettyprint">
