Added qoute generators on page onload

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
                    href="#">Coding chellange </a>
             </li>
         </ul>
+        <div class="qoute_containter">
+            <h2 class="heading-primary--sub">Qoute</h2>
+        </div>
     </main>
+    <script src="index.js"></script>
 </body>
 
 </html>
