--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <main class="main">
-        <h1 class="heading-primary--main">
+        <h1 class="heading-primary--main u-margin-bottom-big">
             The Complete JavaScript Course
         </h1>
-        <ul class="main__list">
+        <ul class="main__list u-margin-bottom-big u-center-text">
             <li class="main__item">
                 <a class="main__link"
                    href="chellange1/index.html">Coding chellange 1</a>
