--- a/chellange1/index.html
+++ b/chellange1/index.html
@@ -36,12 +36,12 @@
           Code
         </h2>
         <pre class="prettyprint">
-        const Mark = {
+        const mark = {
           mass: "50kg",
           height: "37cm"
         };
         
-        const John = {
+        const john = {
           mass: "100kg",
           height: "195cm"
         };
@@ -49,14 +49,14 @@
         const calcBmi = person => {
           const mass = parseInt(person.mass.slice(0, person.mass.length - 2));
           const height = parseInt(person.height.slice(0, person.height.length - 2));
-          return mass / ( height * height );
+          return mass / (height * height);
         }
 
-        const markBMI = calcBmi(Mark);
-        const JohnBMI = calcBmi(John);
+        const markBMI = calcBmi(mark);
+        const johnBMI = calcBmi(john);
         const res = markBMI > JohnBMI
-                    ? `Mark has ${markBMI} grater BMI then John ${JohnBMI}`
-                    : `John ${JohnBMI} has grater BMI then Mark ${markBMI}`;
+                    ? `Mark has ${markBMI} grater BMI then John ${johnBMI}`
+                    : `John ${johnBMI} has grater BMI then Mark ${markBMI}`;
         console.log(res);
         </pre>
       </div>
