--- a/chellange1/index.html
+++ b/chellange1/index.html
@@ -54,7 +54,7 @@
 
         const markBMI = calcBmi(mark);
         const johnBMI = calcBmi(john);
-        const res = markBMI > JohnBMI
+        const res = markBMI > johnBMI
                     ? `Mark has ${markBMI} grater BMI then John ${johnBMI}`
                     : `John ${johnBMI} has grater BMI then Mark ${markBMI}`;
         console.log(res);
