--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="#">Coding chellange </a>
+                   href="chellange2/index.html">Coding chellange 2</a>
             </li>
         </ul>
         <div class="qoute_containter">
