--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <a class="main__link"
                    href="chellange2/index.html">Coding chellange 2</a>
             </li>
+            <li class="main__item">
+                <a class="main__link"
+                   href="chellange3/index.html">Coding chellange 3</a>
+            </li>
         </ul>
         <div class="qoute_containter">
             <h2 class="heading-primary--sub">Qoute</h2>
