Added ; to calculateTip

--- a/chellange3/index.html
+++ b/chellange3/index.html
@@ -43,7 +43,7 @@
           function calculateTip(bill) {
             return (bill <= 50) ? bill * 0.2
               : (50 < bill <= 200) ? bill * 0.15
-                : bill * 0.1
+                : bill * 0.1;
           }
         </pre>
       </div>
