Added challenge4 && media to pre font-size

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <a class="main__link"
                    href="chellange3/index.html">Coding chellange 3</a>
             </li>
+            <li class="main__item">
+                <a class="main__link"
+                   href="chellange4/index.html">Coding chellange 4</a>
+            </li>
         </ul>
         <div class="qoute_containter">
             <h2 class="heading-primary--sub">Qoute</h2>
