Added random bg-color generation to main page btns

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <a class="main__link"
                    href="chellange4/index.html">Coding chellange 4</a>
             </li>
+            <li class="main__item">
+                <a class="main__link"
+                   href="chellange5/index.html">Coding chellange 5</a>
+            </li>
         </ul>
         <div class="qoute_containter">
             <h2 class="heading-primary--sub">Qoute</h2>
