Added link to chellange 6

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <a class="main__link"
                    href="chellange5/index.html">Coding chellange 5</a>
             </li>
+            <li class="main__item">
+                <a class="main__link"
+                   href="chellange6/index.html">Coding chellange 6</a>
+            </li>
         </ul>
         <div class="qoute_containter">
             <h2 class="heading-primary--sub">Qoute</h2>
