--- a/challenge3/index.html
+++ b/challenge3/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="main">
     <h1 class="heading-secondary">
-      Coding chellange 3
+      Coding challenge 3
     </h1>
     <section class="section">
       <div class="section__task">
