--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
         <ul class="main__list u-margin-bottom-big u-center-text">
             <li class="main__item">
                 <a class="main__link"
-                   href="chellange1/index.html">Coding chellange 1</a>
+                   href="challenge1/index.html">Coding challenge 1</a>
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="chellange2/index.html">Coding chellange 2</a>
+                   href="challenge2/index.html">Coding challenge 2</a>
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="chellange3/index.html">Coding chellange 3</a>
+                   href="challenge3/index.html">Coding challenge 3</a>
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="chellange4/index.html">Coding chellange 4</a>
+                   href="challenge4/index.html">Coding challenge 4</a>
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="chellange5/index.html">Coding chellange 5</a>
+                   href="challenge5/index.html">Coding challenge 5</a>
             </li>
             <li class="main__item">
                 <a class="main__link"
-                   href="chellange6/index.html">Coding chellange 6</a>
+                   href="challenge6/index.html">Coding challenge 6</a>
             </li>
         </ul>
         <div class="qoute_containter">
