--- a/challenge2/index.html
+++ b/challenge2/index.html
@@ -13,7 +13,7 @@
 <body>
   <main class="main">
     <h1 class="heading-secondary">
-      Coding chellange 2
+      Coding challenge 2
     </h1>
     <section class="section">
       <div class="section__task">
