--- a/challenge4/index.html
+++ b/challenge4/index.html
@@ -2,40 +2,41 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"
-        href="../css/style.css">
-  <title>Js courses</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+          href="../css/style.css">
+    <title>Js courses</title>
 </head>
 
 <body>
-  <main class="main">
+<main class="main">
     <h1 class="heading-secondary">
-      Coding challenge 4
+        Coding challenge 4
     </h1>
     <section class="section">
-      <div class="section__task">
-        <h2 class="heading-primary--sub">
-          Task
-        </h2>
-        <p class="paragraph">
-          remember Mark and John BMI Challenge. Implement the same functionality with objects and methods.
-          </br>1. For each of them, create an object with properties for their full name, mass, and Height
-          </br>2. Then, add a method to each object to calculate the BMI. Save the BMI to the object and also return
-          it from the method.
-          </br> 3. In the end, log to the console who has the highest BMI, together with the full name and the
-          respective BMI.
-          Don't forget they might have the same BMI.
-          Remember: BMI = mass / heightˆ2 = mass / (height * height). (mass in kg and height in meter).
-        </p>
-      </div>
-      <div class="section__code">
-        <h2 class="heading-primary--sub">
-          Code
-        </h2>
-        <pre class="prettyprint">
+        <div class="section__task">
+            <h2 class="heading-primary--sub">
+                Task
+            </h2>
+            <p class="paragraph">
+                remember Mark and John BMI Challenge. Implement the same functionality with objects and methods.
+                </br>1. For each of them, create an object with properties for their full name, mass, and Height
+                </br>2. Then, add a method to each object to calculate the BMI. Save the BMI to the object and also
+                return
+                it from the method.
+                </br> 3. In the end, log to the console who has the highest BMI, together with the full name and the
+                respective BMI.
+                Don't forget they might have the same BMI.
+                Remember: BMI = mass / heightˆ2 = mass / (height * height). (mass in kg and height in meter).
+            </p>
+        </div>
+        <div class="section__code">
+            <h2 class="heading-primary--sub">
+                Code
+            </h2>
+            <pre class="prettyprint">
           class Person {
             constructor(fullName, mass, height) {
               this.fullName = fullName;
@@ -65,41 +66,41 @@
           const mark = new Person('Mark Cage', 78, 1.75);
           const john = new Person('John Smith', '82', 1.65);
         </pre>
-      </div>
+        </div>
     </section>
-  </main>
-  <footer class="footer u-margin-top-medium">
+</main>
+<footer class="footer u-margin-top-medium">
     <section class="footer__section">
-      <ul>
-        <li>get in touch &rarr;</li>
-        <li>
-          <a href="https://twitter.com/qu1etRain">
-            <img class="icon"
-                 src="https://image.flaticon.com/icons/svg/59/59046.svg">
-          </a>
-        </li>
-        <li>
-          <a href="https://codepen.io/VitaliiLynnyk">
-            <img class="icon"
-                 src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/VitaliiLynnyk">
-            <img class="icon"
-                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/vitalii.lynnyk/">
-            <img class="icon"
-                 src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
-          </a>
-        </li>
-      </ul>
+        <ul>
+            <li>get in touch &rarr;</li>
+            <li>
+                <a href="https://twitter.com/qu1etRain">
+                    <img class="icon"
+                         src="https://image.flaticon.com/icons/svg/59/59046.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://codepen.io/VitaliiLynnyk">
+                    <img class="icon"
+                         src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/VitaliiLynnyk">
+                    <img class="icon"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/vitalii.lynnyk/">
+                    <img class="icon"
+                         src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
+                </a>
+            </li>
+        </ul>
     </section>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+</footer>
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 </body>
 
 </html>
