--- a/challenge1/index.html
+++ b/challenge1/index.html
@@ -2,40 +2,39 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"
-        href="../css/style.css">
-  <title>Js courses</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+          href="../css/style.css">
+    <title>Js courses</title>
 </head>
 
 <body>
-  <main class="main">
+<main class="main">
     <h1 class="heading-secondary">
-      Coding challenge 1
-    </h1>
+        Coding challenge 1</h1>
     <section class="section">
-      <div class="section__task">
-        <h2 class="heading-primary--sub">
-          Task
-        </h2>
-        <p class="paragraph">
-          BMI: mass / height^2 = mass / (height * height)
-          </br>1.store mark and john's mass and height in variables.
-          </br>2.calculate both their bmis.
-          </br>3.create a boolean variable containing information about whether Mark has a higher BMI than John
-          </br>4.Print a string to the console containing the variable from Step 3. (Something like "Is Mark's BMI
-          higher
-          than
-          John's? true").
-        </p>
-      </div>
-      <div class="section__code">
-        <h2 class="heading-primary--sub">
-          Code
-        </h2>
-        <pre class="prettyprint">
+        <div class="section__task">
+            <h2 class="heading-primary--sub">
+                Task
+            </h2>
+            <p class="paragraph">
+                BMI: mass / height^2 = mass / (height * height)
+                </br>1.store mark and john's mass and height in variables.
+                </br>2.calculate both their bmis.
+                </br>3.create a boolean variable containing information about whether Mark has a higher BMI than John
+                </br>4.Print a string to the console containing the variable from Step 3. (Something like "Is Mark's BMI
+                higher
+                than
+                John's? true").
+            </p>
+        </div>
+        <div class="section__code">
+            <h2 class="heading-primary--sub">
+                Code
+            </h2>
+            <pre class="prettyprint">
         const mark = {
           mass: "50kg",
           height: "37cm"
@@ -59,41 +58,41 @@
                     : `John ${johnBMI} has grater BMI then Mark ${markBMI}`;
         console.log(res);
         </pre>
-      </div>
+        </div>
     </section>
-  </main>
-  <footer class="footer u-margin-top-medium">
+</main>
+<footer class="footer u-margin-top-medium">
     <section class="footer__section">
-      <ul>
-        <li>get in touch &rarr;</li>
-        <li>
-          <a href="https://twitter.com/qu1etRain">
-            <img class="icon"
-                 src="https://image.flaticon.com/icons/svg/59/59046.svg">
-          </a>
-        </li>
-        <li>
-          <a href="https://codepen.io/VitaliiLynnyk">
-            <img class="icon"
-                 src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/VitaliiLynnyk">
-            <img class="icon"
-                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/vitalii.lynnyk/">
-            <img class="icon"
-                 src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
-          </a>
-        </li>
-      </ul>
+        <ul>
+            <li>get in touch &rarr;</li>
+            <li>
+                <a href="https://twitter.com/qu1etRain">
+                    <img class="icon"
+                         src="https://image.flaticon.com/icons/svg/59/59046.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://codepen.io/VitaliiLynnyk">
+                    <img class="icon"
+                         src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/VitaliiLynnyk">
+                    <img class="icon"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/vitalii.lynnyk/">
+                    <img class="icon"
+                         src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
+                </a>
+            </li>
+        </ul>
     </section>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+</footer>
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 </body>
 
 </html>
