--- a/challenge3/index.html
+++ b/challenge3/index.html
@@ -2,40 +2,43 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet"
-        href="../css/style.css">
-  <title>Js courses</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+          href="../css/style.css">
+    <title>Js courses</title>
 </head>
 
 <body>
-  <main class="main">
+<main class="main">
     <h1 class="heading-secondary">
-      Coding challenge 3
+        Coding challenge 3
     </h1>
     <section class="section">
-      <div class="section__task">
-        <h2 class="heading-primary--sub">
-          Task
-        </h2>
-        <p class="paragraph">
-          John and his family went on a holiday and went to 3 different restaurants. The bills were $124, $48, and $268.
-          To tip the waiter a fair amount, John created a simple tip calculator (as a function). He likes to tip 20% of
-          the bill when the bill is less than $50, 15% when the bill is between 50-200 dollars, and 10% if more than 200
-          dollars.
-          In the end, John would like to have 2 arrays:
-          </br> 1. Containing all three tips (one for each bill)
-          </br>2. Containing all three final paid amounts (bill + tip).
-          </br>(NOTE: To calculate 20% of a value, simply multiply if with 20/100 = 0.2)
-        </p>
-      </div>
-      <div class="section__code">
-        <h2 class="heading-primary--sub">
-          Code
-        </h2>
-        <pre class="prettyprint">
+        <div class="section__task">
+            <h2 class="heading-primary--sub">
+                Task
+            </h2>
+            <p class="paragraph">
+                John and his family went on a holiday and went to 3 different restaurants. The bills were $124, $48, and
+                $268.
+                To tip the waiter a fair amount, John created a simple tip calculator (as a function). He likes to tip
+                20% of
+                the bill when the bill is less than $50, 15% when the bill is between 50-200 dollars, and 10% if more
+                than 200
+                dollars.
+                In the end, John would like to have 2 arrays:
+                </br> 1. Containing all three tips (one for each bill)
+                </br>2. Containing all three final paid amounts (bill + tip).
+                </br>(NOTE: To calculate 20% of a value, simply multiply if with 20/100 = 0.2)
+            </p>
+        </div>
+        <div class="section__code">
+            <h2 class="heading-primary--sub">
+                Code
+            </h2>
+            <pre class="prettyprint">
           const billsBeforeTip = [124, 48, 268];
           const tipAmounts = billsBeforeTip.map(bill => calculateTip(bill));
           const finalAmounts = tipAmounts.map((tip, index) => tip + billsBeforeTip[index]);
@@ -46,41 +49,41 @@
                 : bill * 0.1;
           }
         </pre>
-      </div>
+        </div>
     </section>
-  </main>
-  <footer class="footer u-margin-top-medium">
+</main>
+<footer class="footer u-margin-top-medium">
     <section class="footer__section">
-      <ul>
-        <li>get in touch &rarr;</li>
-        <li>
-          <a href="https://twitter.com/qu1etRain">
-            <img class="icon"
-                 src="https://image.flaticon.com/icons/svg/59/59046.svg">
-          </a>
-        </li>
-        <li>
-          <a href="https://codepen.io/VitaliiLynnyk">
-            <img class="icon"
-                 src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://github.com/VitaliiLynnyk">
-            <img class="icon"
-                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/vitalii.lynnyk/">
-            <img class="icon"
-                 src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
-          </a>
-        </li>
-      </ul>
+        <ul>
+            <li>get in touch &rarr;</li>
+            <li>
+                <a href="https://twitter.com/qu1etRain">
+                    <img class="icon"
+                         src="https://image.flaticon.com/icons/svg/59/59046.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://codepen.io/VitaliiLynnyk">
+                    <img class="icon"
+                         src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/VitaliiLynnyk">
+                    <img class="icon"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/vitalii.lynnyk/">
+                    <img class="icon"
+                         src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
+                </a>
+            </li>
+        </ul>
     </section>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
+</footer>
+<script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js"></script>
 </body>
 
 </html>
