Added animations, shadows, colors

--- a/challenge6/index.html
+++ b/challenge6/index.html
@@ -40,13 +40,56 @@
             </div>
         </div>
     </div>
-    <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
-    <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
-    <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
+    <button class="btn-new">
+        <img class="icon"
+             src="https://image.flaticon.com/icons/svg/25/25304.svg">New
+        game
+    </button>
+    <button class="btn-roll">
+        <img class="icon"
+             src="https://cdn2.iconfinder.com/data/icons/lovely-line-package/44/_-3-512.png">
+        Roll dice
+    </button>
+    <button class="btn-hold">
+        <img class="icon"
+             src="https://image.flaticon.com/icons/svg/46/46246.svg">
+        Hold
+    </button>
     <img src="dice-5.png"
          alt="Dice"
          class="dice">
 </main>
+<footer class="footer u-margin-top-medium">
+    <section class="footer__section">
+        <ul>
+            <li>get in touch &rarr;</li>
+            <li>
+                <a href="https://twitter.com/qu1etRain">
+                    <img class="icon"
+                         src="https://image.flaticon.com/icons/svg/59/59046.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://codepen.io/VitaliiLynnyk">
+                    <img class="icon"
+                         src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/VitaliiLynnyk">
+                    <img class="icon"
+                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/vitalii.lynnyk/">
+                    <img class="icon"
+                         src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
+                </a>
+            </li>
+        </ul>
+    </section>
+</footer>
 <script src="app.js"></script>
 </body>
 
