Fixed qoutes error && removed prettier autosave

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+          content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet"
-          href="css/style.css">
+          href="css/style.css"/>
     <title>Js courses</title>
 </head>
 
@@ -18,27 +17,39 @@
     <ul class="main__list u-margin-bottom-big u-center-text">
         <li class="main__item">
             <a class="main__link"
-               href="challenge1/index.html">Coding challenge 1</a>
+               href="challenge1/index.html">
+                Coding challenge 1
+            </a>
         </li>
         <li class="main__item">
             <a class="main__link"
-               href="challenge2/index.html">Coding challenge 2</a>
+               href="challenge2/index.html">
+                Coding challenge 2
+            </a>
         </li>
         <li class="main__item">
             <a class="main__link"
-               href="challenge3/index.html">Coding challenge 3</a>
+               href="challenge3/index.html">
+                Coding challenge 3
+            </a>
         </li>
         <li class="main__item">
             <a class="main__link"
-               href="challenge4/index.html">Coding challenge 4</a>
+               href="challenge4/index.html">
+                Coding challenge 4
+            </a>
         </li>
         <li class="main__item">
             <a class="main__link"
-               href="challenge5/index.html">Coding challenge 5</a>
+               href="challenge5/index.html">
+                Coding challenge 5
+            </a>
         </li>
         <li class="main__item">
             <a class="main__link"
-               href="challenge6/index.html">Coding challenge 6</a>
+               href="challenge6/index.html">
+                Coding challenge 6
+            </a>
         </li>
     </ul>
     <div class="qoute_containter">
@@ -51,26 +62,34 @@
             <li>get in touch &rarr;</li>
             <li>
                 <a href="https://twitter.com/qu1etRain">
-                    <img class="icon"
-                         src="https://image.flaticon.com/icons/svg/59/59046.svg">
+                    <img
+                        class="icon"
+                        src="https://image.flaticon.com/icons/svg/59/59046.svg"
+                    />
                 </a>
             </li>
             <li>
                 <a href="https://codepen.io/VitaliiLynnyk">
-                    <img class="icon"
-                         src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
+                    <img
+                        class="icon"
+                        src="http://cdn.onlinewebfonts.com/svg/img_336066.png"
+                    />
                 </a>
             </li>
             <li>
                 <a href="https://github.com/VitaliiLynnyk">
-                    <img class="icon"
-                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
+                    <img
+                        class="icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png"
+                    />
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/vitalii.lynnyk/">
-                    <img class="icon"
-                         src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
+                    <img
+                        class="icon"
+                        src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png"
+                    />
                 </a>
             </li>
         </ul>
@@ -78,5 +97,4 @@
 </footer>
 <script src="index.js"></script>
 </body>
-
 </html>
