Changed ionic to bootstrap font awesome icons

--- a/challenge8/index.html
+++ b/challenge8/index.html
@@ -6,9 +6,8 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600"
         rel="stylesheet"
         type="text/css" />
-  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-        rel="stylesheet"
-        type="text/css" />
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        rel="stylesheet">
   <link type="text/css"
         rel="stylesheet"
         href="../css/style.css" />
@@ -53,7 +52,7 @@
                class="add__value"
                placeholder="Value" />
         <button class="add__btn">
-          <i class="ion-ios-checkmark-outline"></i>
+          <i class="fa fa-check"></i>
         </button>
       </div>
     </div>
