Changed btn animation numbers

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
           Coding challenge 8
         </a>
       </li>
+      <li class="main__item">
+        <a class="main__link"
+           href="challenge9/index.html">
+          Coding challenge 9
+        </a>
+      </li>
     </ul>
     <div class="qoute_containter">
       <h2 class="heading-primary--sub">Qoute</h2>
